examples/test/testpolicy10005.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10005
  namespace: namespace215
spec:
  podSelector:
    matchLabels:
      key26: value28
      key3: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value23
          key47: value6
          key44: value47
      podSelector:
        matchLabels:
          key26: value46
